--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
          <div class="card-img-overlay">
            <h1 class="card-title">Can you guess the lady Superheroes?</h1>
              <p>Use the alphabet below to guess the word, or click hint to get a clue. </p>
+             <p>Refresh the page to play another round.</p>
+            
       </div>
     </div>
   </div>
